--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1>Hello, world!</h1>
     
       <div class="small-demo">
-				<a href="img/full/01.jpg"><img src="img/thumb/01.jpg" title="Drone Photography" alt="" /></a>
-				<a rel="rel2" href="img/full/02.jpg"><img src="img/thumb/02.jpg" alt="" /></a>
-				<a rel="rel3" href="img/full/03.jpg"><img src="img/thumb/03.jpg" alt="" /></a>
-				<a rel="rel2" href="img/full/04.jpg"><img src="img/thumb/04.jpg" alt="" /></a>
-				<a rel="rel2" href="img/full/05.jpg"><img src="img/thumb/05.jpg" alt="" title="Lego Heads" /></a>
-				<a rel="rel1" href="img/full/06.jpg"><img src="img/thumb/06.jpg" alt="" /></a>
+				<a href="img/01.jpg"><img src="img/thumb/01.jpg" title="Drone Photography" alt="" /></a>
+				<a rel="rel2" href="img/02.jpg"><img src="img/thumb/02.jpg" alt="" /></a>
+				<a rel="rel3" href="img/03.jpg"><img src="img/thumb/03.jpg" alt="" /></a>
+				<a rel="rel2" href="img/04.jpg"><img src="img/thumb/04.jpg" alt="" /></a>
+				<a rel="rel2" href="img/05.jpg"><img src="img/thumb/05.jpg" alt="" title="Lego Heads" /></a>
+				<a rel="rel1" href="img/06.jpg"><img src="img/thumb/06.jpg" alt="" /></a>
 				<div class="clearing"></div>
 			</div>
     
