--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <h1>Hello, world!</h1>
     
-      <div class="small-demo">
+      		     <div class="gallery">
 				<a href="img/01.jpg"><img src="img/thumb/01.jpg" title="Drone Photography" alt="" /></a>
 				<a rel="rel2" href="img/02.jpg"><img src="img/thumb/02.jpg" alt="" /></a>
 				<a rel="rel3" href="img/03.jpg"><img src="img/thumb/03.jpg" alt="" /></a>
