--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <script src="/libs/SimpleLightbox/simple-lightbox.js"></script>
     <script src="/libs/SimpleLightbox/simple-lightbox.jquery.min.js"></script>
     <script src="/libs/SimpleLightbox/simple-lightbox.legacy.min.js"></script>
+    <script>  
+	// As A jQuery Plugin -->
+	var gallery = $('.gallery a').simpleLightbox({
+	    /* options */
+	});
+    </script>
 	  
   </body>
 </html>
