--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 	// As A jQuery Plugin -->
 	var gallery = $('.gallery a').simpleLightbox({
 	    'resizeDuration': 200,
-            'wrapAround': true
+            'wrapAround': true,
+	    'overlay':true,
+            'sourceAttr':'href',
+	    'spinner':true,
+	    'nav':true
+
+
 	});
     </script>
 	  
