--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       		     <div class="gallery">
 			     
-				<a href="/img/01.jpg" data-lightbox="roadtrip">
+				<a href="../img/01.jpg" data-lightbox="roadtrip">
 					<img src="/img/thumb/01.jpg" title="Drone Photography" alt="01" />
 			        </a>
 			     
