--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <script src="/libs/SimpleLightbox/simple-lightbox.js"></script>
     <script src="/libs/SimpleLightbox/simple-lightbox.jquery.min.js"></script>
     <script src="/libs/SimpleLightbox/simple-lightbox.legacy.min.js"></script>
-    <script>
+   <!-- <script>
     (function() {
         var $gallery = new SimpleLightbox('.gallery a', {});
     })();
-   </script>
-   <!-- <script>  
-	
+   </script>-->
+   <script>  
+	(function() {
 	var gallery = $('.gallery a').simpleLightbox({
 	    'resizeDuration': 200,
             'wrapAround': true,
@@ -74,7 +74,8 @@
 
 
 	});
-    </script>-->
+      })();
+    </script>
 	  
   </body>
 </html>
