--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     })();
    </script>-->
    <script>  
-	(function() {
+	/*(function() {
 	var gallery = $('.gallery a').simpleLightbox({
 	    /*'resizeDuration': 200,
             'wrapAround': true,
@@ -98,6 +98,11 @@
   sanitizeTitle: false
 	});
       })();
+*/
+   lightbox.option({
+      'resizeDuration': 200,
+      'wrapAround': true
+    })
     </script>
 	  
   </body>
