--- a/index.html
+++ b/index.html
@@ -101,7 +101,14 @@
 */
    lightbox.option({
       'resizeDuration': 200,
-      'wrapAround': true
+      'wrapAround': true,
+      'alwaysShowNavOnTouchDevices': true,
+      'albumLabel': 'Image %1 of %2',
+      'disableScrolling': false,
+      'fadeDuration': 500,
+      'fitImagesInViewport': true,
+      'resizeDuration': 700,
+      'showImageNumberLabel': true
     })
     </script>
 	  
