--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       'fadeDuration': 500,
       'fitImagesInViewport': true,
       'resizeDuration': 700,
-      'showImageNumberLabel': true
+      'showImageNumberLabel': true,
+      'wrapAround': true
     })
     </script>
 	  
