--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	});
       })();
 */
-   lightbox.option({
+   var gallery = $('.gallery a').simpleLightbox({
       'resizeDuration': 200,
       'wrapAround': true,
       'alwaysShowNavOnTouchDevices': true,
