--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         var $gallery = new SimpleLightbox('.gallery a', {});
     })();
    </script>-->
-   <script>  
+  <!-- <script>  
 	/*(function() {
 	var gallery = $('.gallery a').simpleLightbox({
 	    /*'resizeDuration': 200,
@@ -99,6 +99,7 @@
 	});
       })();
 */
+(function() {
    var gallery = $('.gallery a').simpleLightbox({
       'resizeDuration': 200,
       'wrapAround': true,
@@ -110,8 +111,25 @@
       'resizeDuration': 700,
       'showImageNumberLabel': true,
       'wrapAround': true
-    })
-    </script>
+    });
+})();
+    </script>-->
+   <script>
+     (function() {
+   var gallery = $('.gallery a').simpleLightbox({
+      'resizeDuration': 200,
+      'wrapAround': true,
+      'alwaysShowNavOnTouchDevices': true,
+      'albumLabel': 'Image %1 of %2',
+      'disableScrolling': false,
+      'fadeDuration': 500,
+      'fitImagesInViewport': true,
+      'resizeDuration': 700,
+      'showImageNumberLabel': true,
+      'wrapAround': true
+    });
+})();
+   </script>
 	  
   </body>
 </html>
