--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	  
     <!--  SimpleLightbox --> 
     <script src="/libs/SimpleLightbox/simple-lightbox.js"></script>
-    <script src="/libs/SimpleLightbox/simple-lightbox.jquery.min.js"></script>
+   <!-- <script src="/libs/SimpleLightbox/simple-lightbox.jquery.min.js"></script>-->
     <script src="/libs/SimpleLightbox/simple-lightbox.legacy.min.js"></script>
    <!-- <script>
     (function() {
