--- a/index.html
+++ b/index.html
@@ -117,16 +117,19 @@
    <script>
      (function() {
    var gallery = $('.gallery a').simpleLightbox({
-      'resizeDuration': 200,
-      'wrapAround': true,
-      'alwaysShowNavOnTouchDevices': true,
-      'albumLabel': 'Image %1 of %2',
-      'disableScrolling': false,
-      'fadeDuration': 500,
-      'fitImagesInViewport': true,
-      'resizeDuration': 700,
-      'showImageNumberLabel': true,
-      'wrapAround': true
+      resizeDuration: 200,
+      wrapAround: true,
+      alwaysShowNavOnTouchDevices: true,
+      albumLabel: 'Image %1 of %2',
+      disableScrolling: false,
+      fadeDuration: 500,
+      fitImagesInViewport: true,
+      resizeDuration: 700,
+      showImageNumberLabel: true,
+      maxWidth: 800,
+      maxHeight: 600,
+      positionFromTop: 50,
+      wrapAround: true
     });
 })();
    </script>
