--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <title>SimpleLightbox</title>
    <style>
      .img-width {
-        width: 50%;
+        width: 40%;
+     }
+     .gallery {
+        display: flex;
+        justify-content: center:
+        flex-direction: row;
+        flex-wrap: wrap;
      }
    </style>
   </head>
