--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
   </head>
   <body>
     
+<table class="table">
+  <thead>
+    ...
+  </thead>
+  <tbody>
+    <tr class="table-active">
+      ...
+    </tr>
+    <tr>
+      ...
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2" class="table-active">Larry the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+<hr>
+
     <h1>SimpleLightbox</h1>
 
       		     <div class="gallery">
