--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       content: counters(li, ".") ". ";
       color: #dcc6e0;
     }
+    
+    a {
+      color: #abe338;
+    }
 
     footer {
       max-width: 1000px;
