--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
       <li>Learn Node JS</li>
       <li>Learn Node JS</li>
     </ol>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, et! Dolorem placeat perferendis suscipit quam,
-      aliquam deserunt, culpa itaque nesciunt quod nam nihil reiciendis distinctio laudantium. Dolor non quasi, enim ut,
-      cum in reprehenderit voluptatibus officia blanditiis ad cupiditate modi rem eius tempore consectetur et.
-      Repudiandae ut quaerat delectus nihil!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, et! Dolorem placeat perferendis suscipit quam,
-      aliquam deserunt, culpa itaque nesciunt quod nam nihil reiciendis distinctio laudantium. Dolor non quasi, enim ut,
-      cum in reprehenderit voluptatibus officia blanditiis ad cupiditate modi rem eius tempore consectetur et.
-      Repudiandae ut quaerat delectus nihil!</p>
+    <p>
+      Среда Node обладает богатой функциональностью, и имеет широкое распространение, начать установку <a href="https://nodejs.org/">Node</a> 
+    </p>
+    <p>
+      Устанавливая Node  для Windows, необходимо подтвердить местонахождение и набор компонентов по умолчанию. Программа установки добавляет каталог Node 
+      в переменную PATH, чтобы команду node можно было вводить без указания полного пути установки Node.
+    </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, et! Dolorem placeat perferendis suscipit quam,
       aliquam deserunt, culpa itaque nesciunt quod nam nihil reiciendis distinctio laudantium. Dolor non quasi, enim ut,
       cum in reprehenderit voluptatibus officia blanditiis ad cupiditate modi rem eius tempore consectetur et.
