--- a/index.html
+++ b/index.html
@@ -8,34 +8,17 @@
   <title>Learn Node.js</title>
   
   <link rel="stylesheet" href="./style.css">
+  
 </head>
 
 <body>
+  
   <h1>Learn Node.js</h1>
+  
   <main>
     <h2><a href="https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/index.html">List Learn Node.js</a></h2>
-    <ol>
-      <li>
-        <a href="https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js">Created Server Node.js</a>
-        <svg  viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true"><path fill="#dcc6e0" d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"></path></svg>
-      </li>
-      <li>Learn Node.js
-        <ol>
-          <li>Learn Node.js</li>
-          <li>Learn Node.js</li>
-          <li>Learn Node.js
-            <ol>
-              <li>Learn Node.js</li>
-              <li>Learn Node.js</li>
-              <li>Learn Node.js</li>
-            </ol>
-          </li>
-          <li>Learn Node.js</li>
-        </ol>
-      </li>
-      <li>Learn Node.js</li>
-      <li>Learn Node.js</li>
-    </ol>
+    <ol id="lists"></ol>
+    
     <p>
       Среда Node обладает богатой функциональностью, и имеет широкое распространение, начать установку <a href="https://nodejs.org/">Node</a> 
     </p>
@@ -51,6 +34,28 @@
   <footer>
     <span>2022 - Learn Learn Node.js</span>
   </footer>
+  
+  <script>
+    const links = [
+      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Created Server Node.js' },
+      { strLink: '#', strName: 'No name link' },
+      { strLink: '#', strName: 'No name link' },
+      { strLink: '#', strName: 'No name link' },
+      { strLink: '#', strName: 'No name link' },
+    ];
+
+    for (let i = 0; i < links.length; i++) {
+      let lists = document.getElementById('lists');
+      lists.innerHTML += `<li><a href='${links[i].strLink}'>${links[i].strName}</a>
+        <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
+          <path fill="#dcc6e0"
+            d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z">
+          </path>
+        </svg></li>
+      `;
+    }
+  </script>
+  
 </body>
 
 </html>
