--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
   <script>
     const links = [
-      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Created Server Node.js' },
+      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Создание сервера Node.js' },
       { strLink: '#', strName: 'No name link' },
       { strLink: '#', strName: 'No name link' },
       { strLink: '#', strName: 'No name link' },
