--- a/index.html
+++ b/index.html
@@ -27,16 +27,33 @@
   <script>
     const links = [
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Создание сервера Node.js' },
-      { strLink: '#', strName: 'No name link' },
-      { strLink: '#', strName: 'No name link' },
-      { strLink: '#', strName: 'No name link' },
-      { strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
     ];
     
     const text = [
       {txt: 'Среда Node обладает богатой функциональностью, и имеет широкое распространение, начать установку <a href="https://nodejs.org/">Node</a>'},
       {txt: 'Устанавливая Node  для Windows, необходимо подтвердить местонахождение и набор компонентов по умолчанию. Программа установки добавляет каталог Node в переменную PATH, чтобы команду node можно было вводить без указания полного пути установки Node.'},
       {txt: 'Сначала программа включает необходимый для запуска простого сервера HTTp модуль с подходящим именем  HTTP. Внешняя функциональность Node подключается при помощи модулей, экспортирующих определенные типы функциональности, которая может использоваться в приложении или другом модуле. Модули похожи на библиотеки в других языках программирования.'},
+      {txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
     ];
 
     for (let i = 0; i < links.length; i++) {
