--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       {txt: 'Среда Node обладает богатой функциональностью, и имеет широкое распространение, начать установку <a href="https://nodejs.org/">Node</a>'},
       {txt: 'Устанавливая Node  для Windows, необходимо подтвердить местонахождение и набор компонентов по умолчанию. Программа установки добавляет каталог Node в переменную PATH, чтобы команду node можно было вводить без указания полного пути установки Node.'},
       {txt: 'Сначала программа включает необходимый для запуска простого сервера HTTP модуль с подходящим именем  HTTP. Внешняя функциональность Node подключается при помощи модулей, экспортирующих определенные типы функциональности, которая может использоваться в приложении или другом модуле. Модули похожи на библиотеки в других языках программирования.'},
-      {txt: '<pre>const http require(\'http\'); </pre>'},
+      {txt: '<pre>const http = require(\'http\'); </pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
