--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       {txt: 'Устанавливая Node  для Windows, необходимо подтвердить местонахождение и набор компонентов по умолчанию. Программа установки добавляет каталог Node в переменную PATH, чтобы команду node можно было вводить без указания полного пути установки Node.'},
       {txt: 'Сначала программа включает необходимый для запуска простого сервера HTTP модуль с подходящим именем  HTTP. Внешняя функциональность Node подключается при помощи модулей, экспортирующих определенные типы функциональности, которая может использоваться в приложении или другом модуле. Модули похожи на библиотеки в других языках программирования.'},
       {txt: '<pre><code><span class="variable">const</span> http = <span class="module">require</span>(<span class="param">\'http\'</span>); </code></pre>'},
-      //{txt: ''},
+      {txt: 'Модуль импортируется командой Node require, а результат присваивается локальной переменной. После импортирования локальна переменная может использоваться для создания экземпляра веб-сервера функцией http.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
