--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Learn Node.js</h1>
   
   <main>
-    <h2><a href="https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/index.html">List Learn Node.js</a></h2>
+    <h2><a href="https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/index.html">Изучаю Node.js</a></h2>
     <ol id="lists"></ol>
     <div id="paragraph"></div>
   </main>
