--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   
-  <h1>Learn Node.js</h1>
+  <h1>Изучаю Node.js</h1>
   
   <main>
     <h2><a href="https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/index.html">Изучаю Node.js</a></h2>
@@ -21,7 +21,7 @@
     <div id="paragraph"></div>
   </main>
   <footer>
-    <span>2022 - Learn Learn Node.js</span>
+    <span>2022 - Изучаю Node.js</span>
   </footer>
   
   <script>
