--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       {txt: '<pre><code><span class="variable">const</span> http = <span class="module">require</span>(<span class="param">\'http\'</span>); </code></pre>'},
       {txt: 'Модуль импортируется командой Node require, а результат присваивается локальной переменной. После импортирования локальная переменная может использоваться для создания экземпляра веб-сервера функцией http.createServer(), которая принимает в параметрах функцию обратного вызова (callback), которая передает веб-запрос и ответ коду, который обрабатывает веб-запрос и предоставляет ответ.'},
       {txt: 'После того как сервер был создан и получил запрос, функция обратного вызова передает браузеру простой тектовый заголовок с кодом статуса 200, и выводит содержимое, после чего завершает ответ.'},
-      //{txt: ''},
+      {txt: '<a href="https://nodejs.org/ru/docs/guides/getting-started-guide/">Создание веб-сервера Node.js</a>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
