--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="paragraph"></div>
   </main>
   <footer>
-    <span>2022 - Изучаю Node.js</span>
+    <span>2022 - Dovgal Dima - Изучаю Node.js</span>
   </footer>
   
   <script>
