--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script>
     const links = [
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Создание сервера Node.js' },
-      //{ strLink: '#', strName: 'No name link' },
+      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/sync-async.js', strName: 'Синхронный и асинхронный ввод/вывод в Node.js' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
