--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       {txt: 'Модуль импортируется командой Node require, а результат присваивается локальной переменной. После импортирования локальная переменная может использоваться для создания экземпляра веб-сервера функцией http.createServer(), которая принимает в параметрах функцию обратного вызова (callback), которая передает веб-запрос и ответ коду, который обрабатывает веб-запрос и предоставляет ответ.'},
       {txt: 'После того как сервер был создан и получил запрос, функция обратного вызова передает браузеру простой тектовый заголовок с кодом статуса 200, и выводит содержимое, после чего завершает ответ. Всего в нескольких строках кода создается <a href="https://nodejs.org/ru/docs/guides/getting-started-guide/">веб-сервер в среде Node.js</a>'},
       {txt: 'Простой вывод статического сообщения, демонстрирует, что приложение работает и показывает как создать простой веб-сервер. Базовый пример также демонстрирует ключевые элементы всех приложений Node.'},
-      //{txt: ''},
+      {txt: 'Node.js поддерживает как синхронную, так и асинхронную версию большинства функций файловой системы. Обычно использование синхронных операций в веб-запросах в Node.js считается крайне нежелательным, но такая возможность существует'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
