--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       {txt: 'Простой вывод статического сообщения, демонстрирует, что приложение работает и показывает как создать простой веб-сервер. Базовый пример также демонстрирует ключевые элементы всех приложений Node.'},
       {txt: 'Node.js поддерживает как синхронную, так и асинхронную версию большинства функций файловой системы. Обычно использование синхронных операций в веб-запросах в Node.js считается крайне нежелательным, но такая возможность существует'},
       {txt: 'С синхронныйми функциями можно использовать конструкцию try...catch. С асинхронными функциями эта обработка ошибок невозможна, отсюда и передача кода ошибки в параметрах функции.'},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: 'Чтобы получить информацию обо всех доступных параметрах, можно возпользоватся ключом -h или --help'},
+      {txt: '<pre><code>$ node --help </code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
