--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       {txt: 'Node.js поддерживает как синхронную, так и асинхронную версию большинства функций файловой системы. Обычно использование синхронных операций в веб-запросах в Node.js считается крайне нежелательным, но такая возможность существует'},
       {txt: 'С синхронныйми функциями можно использовать конструкцию try...catch. С асинхронными функциями эта обработка ошибок невозможна, отсюда и передача кода ошибки в параметрах функции.'},
       {txt: 'Чтобы получить информацию обо всех доступных параметрах, можно возпользоватся ключом -h или --help. С этим параметром команда node выводит список всех параметров и синтаксис запуска приложения Node.'},
-      {txt: '<pre><code>$ node --help </code></pre>'},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: '<pre><code>$ node --help</code></pre>'},
+      {txt: 'Для получения версии Node используется команда node -v или node --version'},
+      {txt: '<pre><code>$ node --version</code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
