--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Learn Node.js</title>
   
   <link rel="stylesheet" href="./style.css">
-  
+
+  <link rel="shortcut icon" href="./img/logo-js.png" type="image/png">
 </head>
 
 <body>
