--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       {txt: '<pre><code>$ node --help</code></pre>'},
       {txt: 'Для получения версии Node используется команда node -v или node --version'},
       {txt: '<pre><code>$ node --version</code></pre>'},
-      //{txt: ''},
+      {txt: 'Большая часть Node.js написана на С++, зная хорошо С или С++ можно расширить функциональность Node.js - для этого следует написать на С/С++ дополнение.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
