--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
       {txt: 'Для получения версии Node используется команда node -v или node --version'},
       {txt: '<pre><code>$ node --version</code></pre>'},
       {txt: 'Большая часть Node.js написана на С++, зная хорошо С или С++ можно расширить функциональность Node.js - для этого следует написать на С/С++ дополнение.'},
+      {txt: '<h2>Структурные элементы Node: глобальные объекты.</h2>'},
+      {txt: 'Объекты global и process два важнейших объекта в Node.js. Переменная обьявленная в модуле или приложении Node не обладает глобальной доступностью, она ограничиваеться модулем или приложением. Таким образом можно объявить глобальную переменную в модуле и в приложении, использующем этот модуль, и никакого конфликта не будет.'},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
