--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       {txt: 'Большая часть Node.js написана на С++, зная хорошо С или С++ можно расширить функциональность Node.js - для этого следует написать на С/С++ дополнение.'},
       {txt: '<h2>Структурные элементы Node: глобальные объекты.</h2>'},
       {txt: 'Объекты global и process два важнейших объекта в Node.js. Переменная обьявленная в модуле или приложении Node не обладает глобальной доступностью, она ограничиваеться модулем или приложением. Таким образом можно объявить глобальную переменную в модуле и в приложении, использующем этот модуль, и никакого конфликта не будет.'},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: 'Объект global во всех средах предоставляет доступ к глобально доступгым объектам и функциям Node, велючая объект process. Команда в консоли выводит все глобально досиупные объекты и функции.'},
+      {txt: '<pre><code> console.log(global);</code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
