--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       {txt: '<h3>Структурные элементы Node: глобальные объекты.</h3>'},
       {txt: 'Объекты global и process два важнейших объекта в Node.js. Переменная обьявленная в модуле или приложении Node не обладает глобальной доступностью, она ограничиваеться модулем или приложением. Таким образом можно объявить глобальную переменную в модуле и в приложении, использующем этот модуль, и никакого конфликта не будет.'},
       {txt: 'Объект global во всех средах предоставляет доступ к глобально доступгым объектам и функциям Node, велючая объект process. Команда в консоли выводит все глобально досиупные объекты и функции.'},
-      {txt: '<pre><code> console.log(global);</code></pre>'},
+      {txt: '<pre><code>console.log(global);</code></pre>'},
       {txt: 'Объект process принадлежит к числу важнейших компонентов среды Node, так как он предоставляет информацию о среде выполнения. Кроме того, через объект process выполняется стандартный ввод/вывод, можно корректно завершить приложение Node и даже выдать сигнал при завершении итерации в циклесобытий Node.js.'},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: 'C  помощью объекта  process можно получить информацию о среде выполнения объекта process, а также важные средства стандартного ввода/вывода. Ддля проверки свойства process.versions необходимо ввести команду.'},
+      {txt: '<pre><code>$ node -p "process.versions"</code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
