--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       {txt: 'Объект process принадлежит к числу важнейших компонентов среды Node, так как он предоставляет информацию о среде выполнения. Кроме того, через объект process выполняется стандартный ввод/вывод, можно корректно завершить приложение Node и даже выдать сигнал при завершении итерации в циклесобытий Node.js.'},
       {txt: 'C  помощью объекта  process можно получить информацию о среде выполнения объекта process, а также важные средства стандартного ввода/вывода. Ддля проверки свойства process.versions необходимо ввести команду.'},
       {txt: '<pre><code>$ node -p "process.versions"</code></pre>'},
-      //{txt: ''},
+      {txt: 'Информация о среде позволяет разработчику понять, что видит Node до и после разработки.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
