--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     const links = [
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Создание сервера Node.js' },
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/sync-async.js', strName: 'Синхронный и асинхронный ввод/вывод в Node.js' },
+      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/buffer.js', strName: 'Buffer в Node' },
+      //{ strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
+      //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
@@ -57,11 +61,11 @@
       {txt: 'C  помощью объекта  process можно получить информацию о среде выполнения объекта process, а также важные средства стандартного ввода/вывода. Ддля проверки свойства process.versions необходимо ввести команду.'},
       {txt: '<pre><code>$ node -p "process.versions"</code></pre>'},
       {txt: 'Информация о среде позволяет разработчику понять, что видит Node до и после разработки.'},
-      //{txt: ''},
-      //{txt: ''},
-      //{txt: ''},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: '<h3>Буферы в Node</h3>'},
+      {txt: 'В Node.js используется объект Buffer  для операций ввода/вывода данных при преобразовании типизированного массива'},
+      {txt: 'Буфер Node содержит низкоуровневые двоичные данные. Для управления буфером используеться класс Buffer. После того как память будет выделена, изменить размер буфера не удастся.'},
+      {txt: 'Буфер по умолчанию используеться для работы с файлами. Для создания буфера используется ключевое слово new. Заполнять буфер лучше после его создания для избежания неприятных сюрпризов.'},
+      {txt: '<pre><code><span class="variable">let</span> buf = <span class="module">new Buffer</span>(<span class="param">24</span>);</code></pre><br><pre><code>buf.<span class="module">fill</span>(<span class="param">0</span>);</code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
