--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       {txt: 'В Node.js используется объект Buffer  для операций ввода/вывода данных при преобразовании типизированного массива'},
       {txt: 'Буфер Node содержит низкоуровневые двоичные данные. Для управления буфером используеться класс Buffer. После того как память будет выделена, изменить размер буфера не удастся.'},
       {txt: 'Буфер по умолчанию используеться для работы с файлами. Для создания буфера используется ключевое слово new. Заполнять буфер лучше после его создания для избежания неприятных сюрпризов.'},
-      {txt: '<pre><code><span class="variable">let</span> buf = <span class="module">new Buffer</span>(<span class="param">24</span>);</code></pre><br><pre><code>buf.<span class="module">fill</span>(<span class="param">0</span>);</code></pre>'},
+      {txt: '<pre><code><span class="variable">let</span> buf = <span class="module">new Buffer</span>(<span class="param">24</span>);</code></pre><br><pre><code>buf.<span class="module">fill</span>(<span class="param">0</span>);//Буфер заполняется нулями</code></pre>'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
