--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       {txt: 'Буфер по умолчанию используеться для работы с файлами. Для создания буфера используется ключевое слово new. Заполнять буфер лучше после его создания для избежания неприятных сюрпризов.'},
       {txt: `<pre><code><span class="variable">let</span> buf = <span class="module">new Buffer</span>(<span class="param">24</span>); 
 buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер заполняется нулями</code></pre>`},
-      //{txt: ''},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: '<h3>Обратные вызовы и асинхронная обработка событий Node</h3>'},
+      {txt: 'Язык JavaScript является однопоточным, то есть синхронным по своей природе. Это означает, что код JavaScript выполняется строка за строкой до тех пор, пока приложение не будет завершено. Так как среда Node базируется на JavaScript, она наследует это однопоточное синхронное поведение.'},
+      {txt: 'Но если в приложении используется функциональность, требующая ожидания некоторого условия (например, открытия файла), получения веб - ответа, или другой аналогичной операции, блокирование приложения до завершения операции создаст серьезную критическую точку в серверном приложении.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
