--- a/index.html
+++ b/index.html
@@ -70,6 +70,22 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: '<h3>Обратные вызовы и асинхронная обработка событий Node</h3>'},
       {txt: 'Язык JavaScript является однопоточным, то есть синхронным по своей природе. Это означает, что код JavaScript выполняется строка за строкой до тех пор, пока приложение не будет завершено. Так как среда Node базируется на JavaScript, она наследует это однопоточное синхронное поведение.'},
       {txt: 'Но если в приложении используется функциональность, требующая ожидания некоторого условия (например, открытия файла), получения веб - ответа, или другой аналогичной операции, блокирование приложения до завершения операции создаст серьезную критическую точку в серверном приложении.'},
+      {txt: 'Для достижения асинхронной функциональности приложение может пойти по одному из двух путей. Первый вариант - выделить каждый продолжительный процесс в отдельный програмный поток. В это время остальной код выполняется параллельно. Недостаток многопоточного решения заключается в том, что потоки обходятся дорого. Они требуют значительных затрат ресурсов и сильно повышают сложность приложения.'},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
+      //{txt: ''},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
