--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'Язык JavaScript является однопоточным, то есть синхронным по своей природе. Это означает, что код JavaScript выполняется строка за строкой до тех пор, пока приложение не будет завершено. Так как среда Node базируется на JavaScript, она наследует это однопоточное синхронное поведение.'},
       {txt: 'Но если в приложении используется функциональность, требующая ожидания некоторого условия (например, открытия файла), получения веб - ответа, или другой аналогичной операции, блокирование приложения до завершения операции создаст серьезную критическую точку в серверном приложении.'},
       {txt: 'Для достижения асинхронной функциональности приложение может пойти по одному из двух путей. Первый вариант - выделить каждый продолжительный процесс в отдельный програмный поток. В это время остальной код выполняется параллельно. Недостаток многопоточного решения заключается в том, что потоки обходятся дорого. Они требуют значительных затрат ресурсов и сильно повышают сложность приложения.'},
-      //{txt: ''},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: 'Второй вариант - использование событийной архитектуры. В этом случае при запуске процесса, занимающего много времени, приложение не ожидает его завершения. Вместо этого процесс сигнализирует о своем завершении выдачей события. Событие помещается в специальную очередь (цикл событий). Зависимая функциональность регистрирует свой интерес к данному событию в приложении, и когда событие извлекается из очереди и обрабатывается, зависимая функциональность активизируется и получает данные, сопровождающие событие.'},
+      {txt: 'JavaScript в браузере и Node выбирают второй подход.  В браузере при назначении элементу обработчика щелчка вы регистрируете событие (подписываетесь на него) и определяете функцию обратного вызова, которая будет вызываться при возникновении события, таким образом, выполнение остального кода приложения может продолжаться.'},
+      {txt: 'Node  использует собственный цикл событий, но вместо ожидания событий пользовательского интерфейса этот цикл обеспечивает поддержку серверной функциональности - прежде всего ввода/вывода.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
