--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'Второй вариант - использование событийной архитектуры. В этом случае при запуске процесса, занимающего много времени, приложение не ожидает его завершения. Вместо этого процесс сигнализирует о своем завершении выдачей события. Событие помещается в специальную очередь (цикл событий). Зависимая функциональность регистрирует свой интерес к данному событию в приложении, и когда событие извлекается из очереди и обрабатывается, зависимая функциональность активизируется и получает данные, сопровождающие событие.'},
       {txt: 'JavaScript в браузере и Node выбирают второй подход.  В браузере при назначении элементу обработчика щелчка вы регистрируете событие (подписываетесь на него) и определяете функцию обратного вызова, которая будет вызываться при возникновении события, таким образом, выполнение остального кода приложения может продолжаться.'},
       {txt: 'Node  использует собственный цикл событий, но вместо ожидания событий пользовательского интерфейса этот цикл обеспечивает поддержку серверной функциональности - прежде всего ввода/вывода.'},
-      //{txt: ''},
+      {txt: 'События могут сообщать об открытии файла, о том что его содержимое прочитано в буфер, о получениии веб - запроса от пользователя и т.д.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
