--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'JavaScript в браузере и Node выбирают второй подход.  В браузере при назначении элементу обработчика щелчка вы регистрируете событие (подписываетесь на него) и определяете функцию обратного вызова, которая будет вызываться при возникновении события, таким образом, выполнение остального кода приложения может продолжаться.'},
       {txt: 'Node  использует собственный цикл событий, но вместо ожидания событий пользовательского интерфейса этот цикл обеспечивает поддержку серверной функциональности - прежде всего ввода/вывода.'},
       {txt: 'События могут сообщать об открытии файла, о том что его содержимое прочитано в буфер, о получениии веб - запроса от пользователя и т.д.'},
-      //{txt: ''},
+      {txt: 'Node обрабатывает все события в очереди по порядку. Добравшись до события, которое вас интересует, Node вызывает указанную вами функцию обратного вызова (callback) и передает ей всю информацию, связанную с событием.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
