--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'Node  использует собственный цикл событий, но вместо ожидания событий пользовательского интерфейса этот цикл обеспечивает поддержку серверной функциональности - прежде всего ввода/вывода.'},
       {txt: 'События могут сообщать об открытии файла, о том что его содержимое прочитано в буфер, о получениии веб - запроса от пользователя и т.д.'},
       {txt: 'Node обрабатывает все события в очереди по порядку. Добравшись до события, которое вас интересует, Node вызывает указанную вами функцию обратного вызова (callback) и передает ей всю информацию, связанную с событием.'},
-      //{txt: ''},
-      //{txt: ''},
+      {txt: '<h3>Создание асинхронной функции обратного вызова в Node</h3>'},
+      {txt: 'В асинхронной архитектуре положиться на throw...catch нельзя, поэтому обработка ошибок должна выполняться в объекте Error в функции обратного вызова.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
