--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'Node обрабатывает все события в очереди по порядку. Добравшись до события, которое вас интересует, Node вызывает указанную вами функцию обратного вызова (callback) и передает ей всю информацию, связанную с событием.'},
       {txt: '<h3>Создание асинхронной функции обратного вызова в Node</h3>'},
       {txt: 'В асинхронной архитектуре положиться на throw...catch нельзя, поэтому обработка ошибок должна выполняться в объекте Error в функции обратного вызова.'},
-      //{txt: ''},
+      {txt: 'Последний критический аспект функциональности - вызов функции обратного вызова с передачей данных функции при отсутствии ошибки. Но чтобы обратный вызов был асинхронным, его функции вызываются из process.nextTick(). Причина в том, что process.nextTick() гарантирует, что цикл событий будет очищен перед вызовом функции. Это означает что вся синхронная функциональностьбудет обработана до активизации блокирующей функциональности если она есть.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
