--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'В асинхронной архитектуре положиться на throw...catch нельзя, поэтому обработка ошибок должна выполняться в объекте Error в функции обратного вызова.'},
       {txt: 'Последний критический аспект функциональности - вызов функции обратного вызова с передачей данных функции при отсутствии ошибки. Но чтобы обратный вызов был асинхронным, его функции вызываются из process.nextTick(). Причина в том, что process.nextTick() гарантирует, что цикл событий будет очищен перед вызовом функции. Это означает что вся синхронная функциональность будет обработана до активизации блокирующей функциональности если она есть.'},
       {txt: 'Аспекты которые должны быть всегда: <ul><li>Убедитесьв том, что последний аргумент содержит функцию обратного вызова.</li><li>Создайте объект Node Error и верните его в первом аргументе функции обратного вызова, если произошла ошибка.</li><li>Если ошибки нет, вызовите функцию обратного вызова, присвойтеаргументу ошибки null и передайте все нужные данные.</li><li>Функция обратного вызова должна вызываться из process.nextTick(), чтобы процесс не блокировался.</li></ul>'},
-      //{txt: ''},
+      {txt: 'Функциональность может изменяться, но паттерн остаеться постоянным. Этот метод достаточно прост, и он обеспечивает непротиворечивость результатов асинхронных методов.'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
