--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       {txt: 'Функциональность может изменяться, но паттерн остаеться постоянным. Этот метод достаточно прост, и он обеспечивает непротиворечивость результатов асинхронных методов.'},
       {txt: '<h3>EventEmmiter</h3>'},
       {txt: 'Понимание тог, как работает класс EventEmmiter, и умение его использовать - две важнейшие составляющие программирования для Node. '},
-      {txt: 'Класс EventEmmiter обеспечивает асинхронную обрабтку событий в Node. Чтобы продемонстрировать его базовую функциональность, напишем короткое тестовое приложение.'},
+      {txt: 'Класс EventEmitter обеспечивает асинхронную обрабтку событий в Node. Чтобы продемонстрировать его базовую функциональность, напишем короткое тестовое приложение.'},
       {txt: 'Начнем с включения модуля Events:'},
       {txt: `<pre><code><span class="variable">let</span> events = <span class="module">require</span>(<span class="param">'events'</span>);
-<span class="variable">let</span> em = <span class="module">new events.EventEmmiter</span>(); //Экземпляр EventEmmiter</code></pre>`},
+<span class="variable">let</span> em = <span class="module">new events.EventEmitter</span>(); //Экземпляр EventEmitter</code></pre>`},
       {txt: 'Созданный объект EventEmmiter используется для выполнения двух важнейших задач: присоединения обработчика к событию и генерирования самого события. Обработчик события EventEmmiter.on() активизируется при генерировании конкретного события. Первый параметр метода содержит имя собятия; во втором передается функцияобратного вызова для выполнения некоторой функциональности:'},
       {txt: `<pre><code>em.<span class="module">on</span>(<span class="param">'someevent', function(data) {...}</span>);</code></pre>`},
-      {txt: 'Событие генерируется для объекта методом EventEmmiter.emit() при выполнении некоторого условия:'},
+      {txt: 'Событие генерируется для объекта методом EventEmitter.emit() при выполнении некоторого условия:'},
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
