--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/hello.js', strName: 'Создание сервера Node.js' },
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/sync-async.js', strName: 'Синхронный и асинхронный ввод/вывод в Node.js' },
       { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/buffer.js', strName: 'Buffer в Node' },
-      //{ strLink: '#', strName: 'No name link' },
+      { strLink: 'https://github.com/Dmitriy-1986/Learn-Node-JS/blob/master/create-node-file-txt.js', strName: 'Создание текстового файла в Node.js' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
       //{ strLink: '#', strName: 'No name link' },
