--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
-      {txt: `{'Продолжение следует...'}`},
+      {txt: `<span class="to-be-continued">{'Продолжение следует...'}</span>`},
     ];
 
     for (let i = 0; i < links.length; i++) {
