--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ buf.<span class="module">fill</span>(<span class="param">0</span>); //Буфер
       //{txt: ''},
       //{txt: ''},
       //{txt: ''},
-      {txt: `<pre><code><span class="to-be-continued">{'Продолжение следует...'}</span></code></pre>`},
+      {txt: `<pre><code><span class="violet-color">{'Продолжение следует...'}</span></code></pre>`},
     ];
 
     for (let i = 0; i < links.length; i++) {
